--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -5,6 +5,10 @@
     width: 3.2rem;
 }
 
+.md-typeset .md-button {
+    border: 0.1rem solid;
+    border-radius: 2rem;
+
 @keyframes heart {
   0%, 40%, 80%, 100% {
     transform: scale(1);
