Complete mkdocs-material update with latest styles
	new file:   material/assets/javascripts/bundle.2ab50757.min.js
	new file:   material/assets/javascripts/bundle.2ab50757.min.js.map
	new file:   material/assets/javascripts/workers/search.ecf98df9.min.js
	new file:   material/assets/javascripts/workers/search.ecf98df9.min.js.map
	new file:   material/assets/stylesheets/main.6b80c2a2.min.css
	new file:   material/assets/stylesheets/main.6b80c2a2.min.css.map
	new file:   material/assets/stylesheets/palette.cbb835fc.min.css
	new file:   material/assets/stylesheets/palette.cbb835fc.min.css.map
	modified:   material/base.html
	modified:   material/mkdocs_theme.yml
	new file:   material/partials/actions.html
	new file:   material/partials/consent.html
	modified:   material/partials/content.html
	new file:   material/partials/feedback.html
	modified:   material/partials/footer.html
	modified:   material/partials/header.html
	new file:   material/partials/icons.html
	modified:   material/partials/integrations/analytics.html
	modified:   material/partials/integrations/analytics/google.html
	new file:   material/partials/javascripts/announce.html
	modified:   material/partials/javascripts/base.html
	new file:   material/partials/javascripts/consent.html
	new file:   material/partials/javascripts/content.html
	modified:   material/partials/javascripts/palette.html
	modified:   material/partials/languages/de.html
	modified:   material/partials/languages/el.html
	modified:   material/partials/languages/en.html
	modified:   material/partials/languages/es.html
	modified:   material/partials/languages/fr.html
	modified:   material/partials/languages/he.html
	modified:   material/partials/languages/hr.html
	new file:   material/partials/languages/hy.html
	modified:   material/partials/languages/it.html
	modified:   material/partials/languages/ja.html
	new file:   material/partials/languages/lt.html
	new file:   material/partials/languages/lv.html
	new file:   material/partials/langu

--- a/material/partials/nav-item.html
+++ b/material/partials/nav-item.html
@@ -15,15 +15,15 @@
     <li class="{{ class }} md-nav__item--nested">
       {% set checked = "checked" if nav_item.active %}
       {% if "navigation.expand" in features and not checked %}
-        <input class="md-nav__toggle md-toggle" data-md-toggle="{{ path }}" data-md-state="indeterminate" type="checkbox" id="{{ path }}" checked>
+        <input class="md-nav__toggle md-toggle md-toggle--indeterminate" data-md-toggle="{{ path }}" type="checkbox" id="{{ path }}" checked>
       {% else %}
         <input class="md-nav__toggle md-toggle" data-md-toggle="{{ path }}" type="checkbox" id="{{ path }}" {{ checked }}>
       {% endif %}
       {% set indexes = [] %}
       {% if "navigation.indexes" in features %}
-        {% for item in nav_item.children %}
-          {% if item.is_index and not index is defined %}
-            {% set _ = indexes.append(item) %}
+        {% for nav_item in nav_item.children %}
+          {% if nav_item.is_index and not index is defined %}
+            {% set _ = indexes.append(nav_item) %}
           {% endif %}
         {% endfor %}
       {% endif %}
@@ -51,8 +51,7 @@
         </label>
         <ul class="md-nav__list" data-md-scrollfix>
           {% for nav_item in nav_item.children %}
-            {% if "navigation.indexes" in features and nav_item.is_index %}
-            {% else %}
+            {% if not indexes or nav_item != indexes | first %}
               {{ render(nav_item, path ~ "_" ~ loop.index, level + 1) }}
             {% endif %}
           {% endfor %}
