--- a/material/partials/languages/en.html
+++ b/material/partials/languages/en.html
@@ -4,8 +4,12 @@
 {% macro t(key) %}{{ {
   "language": "en",
   "direction": "ltr",
+  "announce.dismiss": "Don't show this again",
   "clipboard.copy": "Copy to clipboard",
   "clipboard.copied": "Copied to clipboard",
+  "consent.accept": "Accept",
+  "consent.manage": "Manage settings",
+  "consent.reject": "Reject",
   "edit.link.title": "Edit this page",
   "footer.previous": "Previous",
   "footer.next": "Next",
@@ -16,7 +20,7 @@
   "nav.title": "Navigation",
   "search.config.lang": "en",
   "search.config.pipeline": "trimmer, stopWordFilter",
-  "search.config.separator": "[\s\-]+",
+  "search.config.separator": "[\\s\\-]+",
   "search.placeholder": "Search",
   "search.share": "Share",
   "search.reset": "Clear",
