--- a/material/partials/languages/sv.html
+++ b/material/partials/languages/sv.html
@@ -5,6 +5,8 @@
   "language": "sv",
   "clipboard.copy": "Kopiera till urklipp",
   "clipboard.copied": "Kopierat till urklipp",
+  "consent.accept": "Acceptera",
+  "consent.manage": "Hantera inställningar",
   "edit.link.title": "Redigera sidan",
   "footer.previous": "Föregående",
   "footer.next": "Nästa",
@@ -33,6 +35,6 @@
   "source.file.date.updated": "Senaste uppdaterad",
   "source.file.date.created": "Skapad",
   "tabs.title": "Flikar",
-  "toc.title": "Innehållsförteckning"
+  "toc.title": "Innehållsförteckning",
   "top.title": "Tillbaka till toppen"
 }[key] }}{% endmacro %}
