--- a/material/partials/languages/zh.html
+++ b/material/partials/languages/zh.html
@@ -3,9 +3,12 @@
 -#}
 {% macro t(key) %}{{ {
   "language": "zh",
-  "direction": "ltr",
+  "announce.dismiss": "不再显示此消息",
   "clipboard.copy": "复制",
   "clipboard.copied": "已复制",
+  "consent.accept": "同意",
+  "consent.manage": "管理设定",
+  "consent.reject": "拒绝",
   "edit.link.title": "编辑此页",
   "footer.previous": "上一页",
   "footer.next": "下一页",
@@ -16,7 +19,7 @@
   "nav.title": "导航栏",
   "search.config.lang": "ja",
   "search.config.pipeline": "trimmer, stemmer",
-  "search.config.separator": "[\，\。]+",
+  "search.config.separator": "[\\s\\-，。]+",
   "search.placeholder": "搜索",
   "search.share": "分享",
   "search.reset": "清空当前内容",
