Update from upstream sync
	modified:   base.html
	new file:   partials/comments.html
	modified:   partials/consent.html
	modified:   partials/content.html
	modified:   partials/feedback.html
	modified:   partials/header.html
	modified:   partials/icons.html
	modified:   partials/javascripts/consent.html
	modified:   partials/languages/de.html
	modified:   partials/search.html
	modified:   partials/tags.html

--- a/material/partials/consent.html
+++ b/material/partials/consent.html
@@ -1,21 +1,31 @@
 {#-
   This file was automatically generated - do not edit
 -#}
-{% import "partials/language.html" as lang with context %}
-{% set cookies = config.extra.consent.cookies %}
-{% if config.extra.analytics and not cookies %}
-  {% set cookies = { "analytics": "Google Analytics" } %}
+{% set cookies = config.extra.consent.cookies | d({}) %}
+{% if config.extra.analytics %}
+  {% if "analytics" not in cookies %}
+    {% set _ = cookies.update({ "analytics": "Google Analytics" }) %}
+  {% endif %}
+{% endif %}
+{% if config.repo_url and "github.com" in config.repo_url %}
+  {% if "github" not in cookies %}
+    {% set _ = cookies.update({ "github": "GitHub" }) %}
+  {% endif %}
 {% endif %}
 {% set actions = config.extra.consent.actions %}
 {% if not actions %}
   {% set actions = ["accept", "manage"] %}
 {% endif %}
+{% if not "manage" in actions %}
+  {% set checked = "checked" %}
+{% endif %}
 <h4>{{ config.extra.consent.title }}</h4>
 <p>{{ config.extra.consent.description }}</p>
-<input type="checkbox" class="md-toggle" id="__settings">
+<input class="md-toggle" type="checkbox" id="__settings" {{ checked }}>
 <div class="md-consent__settings">
   <ul class="task-list">
     {% for type in cookies %}
+      {% set checked = "" %}
       {% if cookies[type] is string %}
         {% set name = cookies[type] %}
         {% set checked = "checked" %}
