--- a/material/partials/consent.html
+++ b/material/partials/consent.html
@@ -16,7 +16,7 @@
 {% if not actions %}
   {% set actions = ["accept", "manage"] %}
 {% endif %}
-{% if not "manage" in actions %}
+{% if "manage" not in actions %}
   {% set checked = "checked" %}
 {% endif %}
 <h4>{{ config.extra.consent.title }}</h4>
@@ -40,7 +40,7 @@
           <input type="checkbox" name="{{ type }}" {{ checked }}>
           <span class="task-list-indicator"></span>
           {{ name }}
-        <label>
+        </label>
       </li>
     {% endfor %}
   </ul>
