--- a/material/partials/tabs.html
+++ b/material/partials/tabs.html
@@ -2,8 +2,8 @@
   This file was automatically generated - do not edit
 -#}
 {% set class = "" %}
-<nav class="md-tabs" aria-label="{{ lang.t('tabs.title') }}" data-md-component="tabs">
-  <div class="md-tabs__inner md-grid">
+<nav class="md-tabs" aria-label="{{ lang.t('tabs') }}" data-md-component="tabs">
+  <div class="md-grid">
     <ul class="md-tabs__list">
       {% for nav_item in nav %}
         {% include "partials/tabs-item.html" %}
