--- a/src/stylesheets/extra.css
+++ b/src/stylesheets/extra.css
@@ -28,7 +28,12 @@
   border-radius: 2rem;
 }
 
-.md-typeset h2 {
+.md-typeset h1,
+.md-typeset h2,
+.md-typeset h3,
+.md-typeset h4,
+.md-typeset h5,
+.md-typeset h6 {
   font-weight: bold;
 }
 
